# college_notes

./: placement_details.txt
.obsidian/: workspace.json
CT2106/: lecture_2022-09-30.txt  lecture_2022-10-13.txt  lecture_2022-10-14.txt  lecture_2022-10-21.txt
CT2108/: lecture_2023-01-10.txt  lecture_2023-01-17.txt  lecture_2023-02-07.txt  lecture_2023-02-21.txt  lecture_2023-03-14.txt
CT213/: lecture_2022-09-26.txt  lecture_2022-10-03.txt  lecture_2022-10-10.txt  lecture_2022-10-17.txt  lecture_2022-11-14.txt
CT216/: lecture_2022-10-20.txt  lecture_2022-10-27.txt  lecture_2022-11-10.txt  lecture_2023-01-12.txt  lecture_2023-03-02.txt
CT230/: lecture_2022-09-07.txt  lecture_2022-09-27.txt  lecture_2022-09-28.txt  lecture_2022-10-11.txt  lecture_2022-10-12.txt  lecture_2022-10-18.txt  lecture_2022-11-29.txt
CT248/: lecture_2023-01-09.txt  lecture_2023-01-16.txt  lecture_2023-01-23.txt
CT255/: lecture_2022-09-05.txt  lecture_2022-09-19.txt  lecture_2022-10-24.txt  lecture_2022-11-14.txt  lecture_2022-11-21.txt  lecture_2023-01-16.txt  lecture_2023-01-23.txt
CT318/: design_project.md  lecture_2023-09-06.txt  lecture_2023-09-11.txt  lecture_2023-09-13.txt  lecture_2023-09-18.txt  lecture_2023-09-20.txt  lecture_2023-09-27.txt  lecture_2023-10-02.txt  lecture_2023-11-06.txt  project_interview.txt
CT326/: lecture_2023-09-04.txt  lecture_2023-09-06.txt  lecture_2023-09-11.txt  (+16 more)
CT331/assignment_c/: CMakeLists.txt  Question1.c  assignment.c  assignmentGeneric.c  genericLinkedList.c  genericLinkedList.h  linkedList.c  linkedList.h  tests.c  testsGeneric.c
(+685 files in other folders)
